Closed Bug 333691 Opened 19 years ago Closed 19 years ago

[@ nsSSLThread::requestPoll - nsSSLIOLayerPoll]

Categories

(Core Graveyard :: Security: UI, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: KaiE)

References

()

Details

(Keywords: coverity, crash)

Crash Data

Attachments

(1 file)

http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/security/manager/ssl/src/nsSSLThread.cpp&rev=1.2&mark=220#215 if out_flags can really be null then this code path crashes in nsSSLThread::rquestPoll.
Thanks for catching this. According to http://www.mozilla.org/projects/nspr/tech-notes/poll-method.html I believe it does not make any sense to call the poll method with a null out_flags, but I agree we should make the code failsafe. Patch coming up
Attached patch Patch v1Splinter Review
Attachment #218155 - Flags: review?(rrelyea)
Comment on attachment 218155 [details] [diff] [review] Patch v1 r+ patch fixes the problem described in the bug.
Attachment #218155 - Flags: review?(rrelyea) → review+
checked in
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attachment #218155 - Flags: approval-branch-1.8.1+
I got such a crash today with Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.16) Gecko/20080707 Thunderbird/2.0.0.16 ID:2008070710 Is it related in some way or should I file a new bug? Process: thunderbird-bin [257] Path: /Applications/Thunderbird.app/Contents/MacOS/thunderbird-bin Identifier: org.mozilla.thunderbird Version: 2.0.0.16 (2.0.0.16) Code Type: X86 (Native) Parent Process: launchd [1] Date/Time: 2008-08-03 10:52:12.969 +0200 OS Version: Mac OS X 10.5.4 (9E17) Report Version: 6 Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x00000000697075bf Crashed Thread: 1 Thread 1 Crashed: 0 org.mozilla.thunderbird 0x00454d02 nsSSLThread::requestPoll(nsNSSSocketInfo*, short, short*) + 344 1 org.mozilla.thunderbird 0x004567c6 nsSSLIOLayerHelpers::Cleanup() + 374 2 libnspr4.dylib 0x00ef6ce1 PR_Poll + 939 3 org.mozilla.thunderbird 0x00441c7f nsSocketTransportService::Poll(unsigned int*) + 99 4 org.mozilla.thunderbird 0x0044225d nsSocketTransportService::ServiceEventQ() + 623 5 libxpcom_core.dylib 0x00e4dfe3 nsThread::Main(void*) + 41 6 libnspr4.dylib 0x00ef7ffd PR_Select + 813 7 libSystem.B.dylib 0x919df6f5 _pthread_start + 321 8 libSystem.B.dylib 0x919df5b2 thread_start + 34
OS: Linux → All
Hardware: PC → All
QA Contact: ui
Crash Signature: [@ nsSSLThread::requestPoll - nsSSLIOLayerPoll]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: