security/manager/ssl/src/nsNSSIOLayer.cpp
@@ -1132,8 +1132,13 @@ nsSSLIOLayerPoll(PRFileDesc *fd, PRInt16 in_flags, PRInt16 *out_flags)
 {
   nsNSSShutDownPreventionLock locker;
 
-  if (out_flags)
-    *out_flags = 0;
+  if (!out_flags)
+  {
+    NS_WARNING("nsSSLIOLayerPoll called with null out_flags");
+    return 0;
+  }
+
+  *out_flags = 0;
 
   if (!fd)
   {
